--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peace",
-  "version": "0.1.0",
+  "version": "v1.3.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
