--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -1,9 +1,9 @@
 {
   "name": "peace",
-  "version": "v0.3.0-007",
+  "version": "v0.4.0-001",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode test",
     "build": "vue-cli-service build --mode test",
     "build:prod": "vue-cli-service build --mode prod",
     "build:test": "vue-cli-service build --mode test",
