--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -3,7 +3,7 @@
   "version": "v0.4.0-001",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --mode test",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --mode test",
     "build:prod": "vue-cli-service build --mode prod",
     "build:test": "vue-cli-service build --mode test",
