--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "nprogress": "^0.2.0",
     "vant": "^2.0.6",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
