--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -28,7 +28,10 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-image-resize-module": "^3.0.0",
     "sass-loader": "^7.1.0",
+    "vue-quill-editor": "^3.0.6",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
