--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dev",
-  "version": "0.1.0",
+  "name": "test",
+  "version": "0.1.0-001",
   "private": true,
   "scripts": {
     "start": "npm run serve",
@@ -35,10 +35,7 @@
     "env": {
       "node": true
     },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
+    "extends": ["plugin:vue/essential", "eslint:recommended"],
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
@@ -49,8 +46,5 @@
       "autoprefixer": {}
     }
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+  "browserslist": ["> 1%", "last 2 versions"]
 }
