--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dev",
-  "version": "0.6.0-006",
+  "name": "test",
+  "version": "0.6.0-007",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
