--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pre",
-  "version": "0.1.0-001",
+  "name": "test",
+  "version": "0.2.0-001",
   "private": true,
   "scripts": {
     "start": "npm run serve",
