--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test",
-  "version": "0.7.0",
+  "version": "0.7.0-002",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
