--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "dayjs": "^1.8.14",
+    "dayjs": "^1.8.15",
     "echarts": "^4.2.1",
     "element-ui": "^2.9.1",
     "nprogress": "^0.2.0",
@@ -39,7 +39,10 @@
     "env": {
       "node": true
     },
-    "extends": ["plugin:vue/essential", "eslint:recommended"],
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
@@ -50,5 +53,8 @@
       "autoprefixer": {}
     }
   },
-  "browserslist": ["> 1%", "last 2 versions"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
