--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -16,6 +16,7 @@
     "nprogress": "^0.2.0",
     "vant": "^2.0.6",
     "vue": "^2.6.10",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.1"
   },
@@ -38,7 +39,10 @@
     "env": {
       "node": true
     },
-    "extends": ["plugin:vue/essential", "eslint:recommended"],
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
@@ -49,5 +53,8 @@
       "autoprefixer": {}
     }
   },
-  "browserslist": ["> 1%", "last 2 versions"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
