--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.10",
     "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.0.6",
+    "vue2-countdown": "^1.0.8",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
