--- a/packages/repo-patient/.env
+++ b/packages/repo-patient/.env
@@ -2,6 +2,9 @@
 ## 当开发环境时（npm run serve），当前环境变量生效。
 NODE_ENV = 'development'
 
+## RELEASE FLODER PATH
+VUE_APP_RELEASE_FLODER_PATH = '/h5/'
+
 ## BASE API
 VUE_APP_BASE_API = 'https://devpatient.hp.aijiayi.com/'
 
