--- a/packages/repo-patient/.env
+++ b/packages/repo-patient/.env
@@ -1,4 +1,4 @@
-## NODE_ENV 
+## NODE_ENV
 ## 当开发环境时（npm run serve），当前环境变量生效。
 NODE_ENV = 'development'
 
@@ -10,3 +10,6 @@ VUE_APP_BASE_API = 'https://devpatient.hp.aijiayi.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
+
+## MAP KEY
+VUE_APP_MAP_KEY = 'S2WBZ-VHEK5-UCAIE-Q4TPB-LO7P3-DCB54'
