--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dev",
-  "version": "0.8.1-001",
+  "name": "test",
+  "version": "0.8.1-004",
   "private": true,
   "scripts": {
     "start": "npm run serve",
