--- a/packages/repo-doctor/.env.prod
+++ b/packages/repo-doctor/.env.prod
@@ -4,7 +4,7 @@
 NODE_ENV = 'production'
 
 ## BASE API
-VUE_APP_BASE_API = 'https://devdoctor.hp.aijiayi.com/'
+VUE_APP_BASE_API = 'https://doctor.hp.aijiayi.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = 'a5b5212d7ff034b508d6e889040ffdf7'
