--- a/packages/repo-patient/.env
+++ b/packages/repo-patient/.env
@@ -16,3 +16,9 @@ VUE_APP_MAP_KEY = 'S2WBZ-VHEK5-UCAIE-Q4TPB-LO7P3-DCB54'
 
 ## 微信公众号 appid
 VUE_APP_APPID = 'wx78d7ae35932558e6'
+
+## 微信公众号 appid
+VUE_APP_APPID = 'wx78d7ae35932558e6'
+
+## 渠道ID channelid
+VUE_APP_CHANNELID = 'zcunimlvdn'
