--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test",
-  "version": "0.8.2-009",
+  "version": "0.8.2-009g",
   "private": true,
   "scripts": {
     "start": "npm run serve",
