--- a/packages/repo-patient/.env
+++ b/packages/repo-patient/.env
@@ -6,7 +6,7 @@ NODE_ENV = 'development'
 VUE_APP_RELEASE_FLODER_PATH = '/h5/'
 
 ## BASE API
-VUE_APP_BASE_API = 'https://devpatient.hp.aijiayi.com/'
+VUE_APP_BASE_API = 'https://testpatient.hp.aijiayi.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
@@ -16,10 +16,3 @@ VUE_APP_MAP_KEY = 'S2WBZ-VHEK5-UCAIE-Q4TPB-LO7P3-DCB54'
 
 ## 微信公众号 appid
 VUE_APP_APPID = 'wx78d7ae35932558e6'
-
-
-## 渠道ID channelid
-VUE_APP_CHANNELID = 'zcunimlvdn'
-
-### 渠道ID channelid
-#VUE_APP_CHANNELID = 'zcunimlvdn'
