--- a/packages/repo-patient/jsconfig.json
+++ b/packages/repo-patient/jsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@src/*": ["./src/*"],
-      "@public/*": ["./public/*"]
+      "@/*": ["./src/*"],
+      "@src/*": ["./src/*"]
     }
   },
   "exclude": ["node_modules"],
