--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pre",
-  "version": "0.8.1-001",
+  "name": "test",
+  "version": "0.8.2-005",
   "private": true,
   "scripts": {
     "start": "npm run serve",
@@ -43,7 +43,10 @@
     "env": {
       "node": true
     },
-    "extends": ["plugin:vue/essential", "eslint:recommended"],
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
@@ -54,5 +57,8 @@
       "autoprefixer": {}
     }
   },
-  "browserslist": ["> 1%", "last 2 versions"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
