--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test",
-  "version": "0.8.2-020",
+  "name": "pre",
+  "version": "0.8.2-001",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
