--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test",
-  "version": "0.8.2-005",
+  "name": "pre",
+  "version": "0.8.2-001",
   "private": true,
   "scripts": {
     "start": "npm run serve",
