--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dev",
-  "version": "0.8.2-023",
+  "version": "0.8.3-001",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -19,6 +19,7 @@
     "vconsole": "^3.3.4",
     "vue": "^2.6.10",
     "vue-echarts": "^4.0.4",
+    "vue-page-stack": "^1.4.1",
     "vue-router": "^3.0.6",
     "vuex": "^3.0.1"
   },
