--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "compressorjs": "^1.0.6",
     "core-js": "^3.1.2",
     "echarts": "^4.4.0",
     "nprogress": "^0.2.0",
