--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pre",
-  "version": "0.8.3-003",
+  "name": "dev",
+  "version": "0.9.0-001",
   "private": true,
   "scripts": {
     "start": "npm run serve",
