--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -32,7 +32,6 @@
     "@vue/cli-service": "^4.0.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.1",
-    "compression-webpack-plugin": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
@@ -44,6 +43,7 @@
     "sass-loader": "^7.0.0",
     "terser-webpack-plugin": "^1.2.3",
     "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "webpack-bundle-analyzer": "^3.6.0",
+    "zopfli-webpack-plugin": "^0.1.0"
   }
 }
