--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -43,6 +43,7 @@
     "sass-loader": "^7.0.0",
     "vue-template-compiler": "^2.6.10",
     "webpack-bundle-analyzer": "^3.6.0",
+    "workbox-webpack-plugin": "^4.3.1",
     "zopfli-webpack-plugin": "^0.1.0"
   }
 }
