--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test",
-  "version": "0.8.3-005",
+  "name": "dev",
+  "version": "0.9.0-001",
   "private": true,
   "scripts": {
     "start": "npm run serve",
@@ -17,6 +17,7 @@
     "dayjs": "^1.8.15",
     "echarts": "^4.2.1",
     "element-ui": "^2.9.1",
+    "lodash": "^4.17.15",
     "nprogress": "^0.2.0",
     "v-viewer": "^1.4.1",
     "vue": "^2.6.10",
