--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dev",
-  "version": "0.9.0-001",
+  "name": "test",
+  "version": "0.9.0-002",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
