--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dev",
-  "version": "0.10.0",
+  "version": "0.10.0-001",
   "private": true,
   "scripts": {
     "start": "npm run serve",
