fix bug 【病历中的辅助检查取消最少10字的限制】

--- a/packages/repo-doctor/.env
+++ b/packages/repo-doctor/.env
@@ -3,7 +3,7 @@
 NODE_ENV = 'development'
 
 ## BASE API
-VUE_APP_BASE_API = 'https://devdoctor.hp.aijiayi.com/'
+VUE_APP_BASE_API = 'https://testdoctor.hp.aijiayi.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
