--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -1,6 +1,6 @@
 {
   "name": "patient",
-  "version": "1.0.1-003",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
