--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doctor-web",
-  "version": "1.0.1-002",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "start": "npm run serve",
