切换域名 && 增加环境变量

--- a/packages/repo-patient/.env
+++ b/packages/repo-patient/.env
@@ -6,7 +6,7 @@ NODE_ENV = 'development'
 VUE_APP_RELEASE_FLODER_PATH = '/h5/'
 
 ## BASE API
-VUE_APP_BASE_API = 'https://testpatient.hp.aijiayi.com/'
+VUE_APP_BASE_API = 'https://devpatient.holoalpha.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
