--- a/packages/repo-patient/package.json
+++ b/packages/repo-patient/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve",
     "build:dev": "vue-cli-service build --mode dev",
     "build:test": "vue-cli-service build --mode test",
+    "build:pre": "vue-cli-service build --mode pre",
     "build:prod": "vue-cli-service build --mode prod",
     "build": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
