--- a/packages/repo-patient/.env.dev
+++ b/packages/repo-patient/.env.dev
@@ -4,7 +4,7 @@
 NODE_ENV = 'production'
 
 ## BASE API
-VUE_APP_BASE_API = 'https://devpatient.hp.aijiayi.com/'
+VUE_APP_BASE_API = 'https://devpatient.holoalpha.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
