--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -14,6 +14,6 @@ VUE_APP_RELEASE_FLODER_PATH = '/'
 
 ## API 路径
 ## Mock API 
-VUE_APP_MOCK_API = '/mock/'
+VUE_APP_MOCK_API = 'http://devyapi.holoalpha.com/mock/43/'
 ## Server API
-VUE_APP_BASE_API = 'https://devpatient.holoalpha.com/'
+VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
