--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -10,10 +10,10 @@ NODE_ENV = 'development'
 VUE_APP_PLATFORM = 'web'
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/framework/'
+VUE_APP_RELEASE_FLODER_PATH = '/operation'
 
 ## API 路径
 ## Mock API 
-VUE_APP_MOCK_API = '/mock/'
+VUE_APP_MOCK_API = 'http://devyapi.holoalpha.com/mock/47/'
 ## Server API
-VUE_APP_BASE_API = 'https://devpatient.holoalpha.com/'
+VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
