--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -10,7 +10,10 @@ NODE_ENV = 'development'
 VUE_APP_PLATFORM = 'web'
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/console'
+VUE_APP_RELEASE_FLODER_PATH = '/web'
+
+## 官网地址
+VUE_APP_WEB_SITE = 'http://localhost:8080/web/'
 
 ## API 路径
 ## Mock API 
