--- a/packages/repo-organization/.env.pre
+++ b/packages/repo-organization/.env.pre
@@ -8,3 +8,6 @@ NODE_ENV = 'production'
 
 ## Server API
 VUE_APP_BASE_API = 'https://devpatient.holoalpha.com/'
+
+## 官网地址
+VUE_APP_WEB_SITE = 'https://preweb.holoalpha.com/web/'
