--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -8,3 +8,6 @@ NODE_ENV = 'production'
 
 ## Server API
 VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
+
+## 官网地址
+VUE_APP_WEB_SITE = 'https://devweb.holoalpha.com/web/'
