--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -10,7 +10,7 @@ NODE_ENV = 'development'
 VUE_APP_PLATFORM = 'web'
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/operation'
+VUE_APP_RELEASE_FLODER_PATH = '/web'
 
 ## API 路径
 ## Mock API 
