--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -7,7 +7,7 @@
 NODE_ENV = 'production'
 
 ## Server API
-VUE_APP_BASE_API = 'https://devpatient.holoalpha.com/'
+VUE_APP_BASE_API = 'https://console.holoalpha.com/'
 
 ## 官网地址
-VUE_APP_WEB_SITE = 'https://preweb.holoalpha.com/web/'
+VUE_APP_WEB_SITE = 'https://web.holoalpha.com/web/'
