--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -3,23 +3,25 @@
   "version": "1.0.3",
   "private": true,
   "scripts": {
-    "start": "npm run serve",
     "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build --mode prod",
+    "lint": "vue-cli-service lint",
     "build:dev": "vue-cli-service build --mode dev",
-    "build:test": "vue-cli-service build --mode test",
     "build:pre": "vue-cli-service build --mode pre",
     "build:prod": "vue-cli-service build --mode prod",
-    "build": "vue-cli-service build --mode prod",
-    "lint": "vue-cli-service lint"
+    "build:test": "vue-cli-service build --mode test",
+    "start": "npm run serve"
   },
   "dependencies": {
+    "@quasar/extras": "^1.0.0",
     "axios": "^0.19.0",
-    "core-js": "^2.6.5",
+    "core-js": "^3.6.4",
     "dayjs": "^1.8.15",
     "echarts": "^4.2.1",
     "element-ui": "^2.9.1",
     "lodash": "^4.17.15",
     "nprogress": "^0.2.0",
+    "quasar": "^1.0.0",
     "v-viewer": "^1.4.1",
     "vue": "^2.6.10",
     "vue-echarts": "^4.0.3",
@@ -27,16 +29,18 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-imports": "1.5.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
     "sass-loader": "^7.1.0",
+    "vue-cli-plugin-quasar": "^2.0.1",
     "vue-quill-editor": "^3.0.6",
     "vue-template-compiler": "^2.6.10"
   },
