--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -14,6 +14,6 @@ VUE_APP_RELEASE_FLODER_PATH = '/web'
 
 ## API 路径
 ## Mock API 
-VUE_APP_MOCK_API = 'http://devyapi.holoalpha.com/mock/47/'
+VUE_APP_MOCK_API = 'http://devyapi.imedcloud.jk.com/mock/47/'
 ## Server API
-VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
+VUE_APP_BASE_API = 'https://devoperate.imedcloud.jk.com/'
