--- a/packages/repo-operation/.env.prod
+++ b/packages/repo-operation/.env.prod
@@ -7,4 +7,4 @@
 NODE_ENV = 'production'
 
 ## Server API
-VUE_APP_BASE_API = 'https://operate.holoalpha.com/'
+VUE_APP_BASE_API = 'https://operate.imedcloud.jk.com/'
