--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -17,6 +17,6 @@ VUE_APP_WEB_SITE = 'http://localhost:8080/web/'
 
 ## API 路径
 ## Mock API 
-VUE_APP_MOCK_API = 'http://devyapi.holoalpha.com/mock/43/'
+VUE_APP_MOCK_API = 'http://devyapi.imedcloud.jk.com/mock/43/'
 ## Server API
-VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
+VUE_APP_BASE_API = 'https://devconsole.imedcloud.jk.com/'
