--- a/packages/repo-organization/.env.pre
+++ b/packages/repo-organization/.env.pre
@@ -7,7 +7,7 @@
 NODE_ENV = 'production'
 
 ## Server API
-VUE_APP_BASE_API = 'https://preconsole.holoalpha.com/'
+VUE_APP_BASE_API = 'https://preconsole.imedcloud.jk.com/'
 
 ## 官网地址
-VUE_APP_WEB_SITE = 'https://preweb.holoalpha.com/web/'
+VUE_APP_WEB_SITE = 'https://preweb.imedcloud.jk.com/web/'
