--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -7,7 +7,7 @@
 NODE_ENV = 'production'
 
 ## Server API
-VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
+VUE_APP_BASE_API = 'https://devconsole.imedcloud.jk.com/'
 
 ## 官网地址
-VUE_APP_WEB_SITE = 'https://devweb.holoalpha.com/web/'
+VUE_APP_WEB_SITE = 'https://devweb.imedcloud.jk.com/web/'
