--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -7,7 +7,7 @@
 NODE_ENV = 'production'
 
 ## Server API
-VUE_APP_BASE_API = 'https://testconsole.holoalpha.com/'
+VUE_APP_BASE_API = 'https://testconsole.imedcloud.jk.com/'
 
 ## 官网地址
-VUE_APP_WEB_SITE = 'https://testweb.holoalpha.com/web/'
+VUE_APP_WEB_SITE = 'https://testweb.imedcloud.jk.com/web/'
