--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -19,4 +19,4 @@ VUE_APP_WEB_SITE = 'http://localhost:8080/web/'
 ## Mock API 
 VUE_APP_MOCK_API = 'http://devyapi.imedcloud.jk.com/mock/43/'
 ## Server API
-VUE_APP_BASE_API = 'https://devconsole.imedcloud.jk.com/'
+VUE_APP_BASE_API = 'http://devconsole.imedcloud.jk.com/'
