--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -16,4 +16,4 @@ VUE_APP_RELEASE_FLODER_PATH = '/web'
 ## Mock API 
 VUE_APP_MOCK_API = 'http://devyapi.imedcloud.jk.com/mock/47/'
 ## Server API
-VUE_APP_BASE_API = 'https://devoperate.imedcloud.jk.com/'
+VUE_APP_BASE_API = 'http://devoperate.imedcloud.jk.com/'
