--- a/packages/repo-operation/.env.pre
+++ b/packages/repo-operation/.env.pre
@@ -7,4 +7,4 @@
 NODE_ENV = 'production'
 
 ## Server API
-VUE_APP_BASE_API = 'https://preoperate.imedcloud.jk.com/'
+VUE_APP_BASE_API = 'http://preoperate.imedcloud.jk.com/'
