--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -7,4 +7,4 @@
 NODE_ENV = 'production'
 
 ## Server API
-VUE_APP_BASE_API = 'https://testoperate.imedcloud.jk.com/'
+VUE_APP_BASE_API = 'http://testoperate.imedcloud.jk.com/'
