--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -10,13 +10,13 @@ NODE_ENV = 'development'
 VUE_APP_PLATFORM = 'web'
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/web'
+VUE_APP_RELEASE_FLODER_PATH = '/'
 
 ## 官网地址
-VUE_APP_WEB_SITE = 'http://localhost:8080/web/'
+VUE_APP_WEB_SITE = 'http://localhost:8080/'
 
 ## API 路径
 ## Mock API 
-VUE_APP_MOCK_API = 'http://devyapi.imedcloud.jk.com/mock/43/'
+VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/43/'
 ## Server API
-VUE_APP_BASE_API = 'http://devconsole.imedcloud.jk.com/'
+VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
