--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -6,8 +6,8 @@
 ## 编译模式
 NODE_ENV = 'production'
 
-## Server API
-VUE_APP_BASE_API = 'http://console.imedcloud.jk.com/'
-
 ## 官网地址
-VUE_APP_WEB_SITE = 'http://web.imedcloud.jk.com/web/'
+VUE_APP_WEB_SITE = 'http://web.imedcloud.jk.com/'
+
+## Server API
+VUE_APP_BASE_API = 'https://console.holoalpha.com/'
