--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -6,8 +6,8 @@
 ## 编译模式
 NODE_ENV = 'production'
 
-## Server API
-VUE_APP_BASE_API = 'http://devconsole.imedcloud.jk.com/'
-
 ## 官网地址
-VUE_APP_WEB_SITE = 'http://devweb.imedcloud.jk.com/web/'
+VUE_APP_WEB_SITE = 'http://devweb.imedcloud.jk.com/'
+
+## Server API
+VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
