--- a/packages/repo-organization/.env.pre
+++ b/packages/repo-organization/.env.pre
@@ -6,8 +6,8 @@
 ## 编译模式
 NODE_ENV = 'production'
 
-## Server API
-VUE_APP_BASE_API = 'http://preconsole.imedcloud.jk.com/'
-
 ## 官网地址
-VUE_APP_WEB_SITE = 'http://preweb.imedcloud.jk.com/web/'
+VUE_APP_WEB_SITE = 'http://preweb.imedcloud.jk.com/'
+
+## Server API
+VUE_APP_BASE_API = 'https://preconsole.holoalpha.com/'
