--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -10,10 +10,10 @@ NODE_ENV = 'development'
 VUE_APP_PLATFORM = 'web'
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/web'
+VUE_APP_RELEASE_FLODER_PATH = '/'
 
 ## API 路径
 ## Mock API 
-VUE_APP_MOCK_API = 'http://devyapi.imedcloud.jk.com/mock/47/'
+VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/47/'
 ## Server API
-VUE_APP_BASE_API = 'http://devoperate.imedcloud.jk.com/'
+VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
