--- a/packages/repo-operation/.env.dev
+++ b/packages/repo-operation/.env.dev
@@ -7,4 +7,4 @@
 NODE_ENV = 'production'
 
 ## Server API
-VUE_APP_BASE_API = 'http://devoperate.imedcloud.jk.com/'
+VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
