--- a/packages/repo-doctor/.prettierrc
+++ b/packages/repo-doctor/.prettierrc
@@ -1,5 +1,7 @@
 {
   "semi": false,
   "singleQuote": true,
-  "printWidth": 100
+  "printWidth": 160,
+  "arrowParens": "always",
+  "trailingComma": "none"
 }
