--- a/packages/repo-doctor/.env
+++ b/packages/repo-doctor/.env
@@ -2,6 +2,9 @@
 ## 当开发环境时（npm run serve），当前环境变量生效。
 NODE_ENV = 'development'
 
+
+## MOCK API
+VUE_APP_MOCK_API = 'http://devyapi.holoalpha.com/mock/27/'
 ## BASE API
 VUE_APP_BASE_API = 'https://devdoctor.holoalpha.com/'
 
