--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -7,7 +7,7 @@
 NODE_ENV = 'production'
 
 ## 官网地址
-VUE_APP_WEB_SITE = 'http://devweb.imedcloud.jk.com/'
+VUE_APP_WEB_SITE = 'http://devconsole.holoalpha.com/web/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
