--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -6,6 +6,9 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/web/'
+
 ## 官网地址
 VUE_APP_WEB_SITE = 'http://devconsole.holoalpha.com/web/'
 
