--- a/packages/repo-hybrid/.env.dev
+++ b/packages/repo-hybrid/.env.dev
@@ -8,6 +8,16 @@ NODE_ENV = 'production'
 
 ## Server API
 VUE_APP_BASE_API = 'https://devdoctor.holoalpha.com/'
+## Server API - iOS
+VUE_APP_BASE_API_IOS = 'https://devdoctor.holoalpha.com/webapp/'
+## Server API - Android
+VUE_APP_BASE_API_ANDROID = 'https://devdoctor.holoalpha.com/webapp/'
+## Server API - PC
+VUE_APP_BASE_API_PC = 'https://devdoctor.holoalpha.com/client/'
+## Server API - H5
+VUE_APP_BASE_API_H5 = 'https://devpatient.holoalpha.com/client/'
+## Server API - Wechat
+VUE_APP_BASE_API_WECHAT = 'https://devpatient.holoalpha.com/client/'
 
 ## IM KEY
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
