--- a/packages/repo-hybrid/.env.prod
+++ b/packages/repo-hybrid/.env.prod
@@ -8,3 +8,13 @@ NODE_ENV = 'production'
 
 ## Server API
 VUE_APP_BASE_API = 'https://doctor.holoalpha.com/'
+## Server API - iOS
+VUE_APP_BASE_API_IOS = 'https://doctor.holoalpha.com/webapp/'
+## Server API - Android
+VUE_APP_BASE_API_ANDROID = 'https://doctor.holoalpha.com/webapp/'
+## Server API - PC
+VUE_APP_BASE_API_PC = 'https://doctor.holoalpha.com/client/'
+## Server API - H5
+VUE_APP_BASE_API_H5 = 'https://patient.holoalpha.com/client/'
+## Server API - Wechat
+VUE_APP_BASE_API_WECHAT = 'https://patient.holoalpha.com/client/'
