Set default title && Change env

--- a/packages/repo-hybrid/.env
+++ b/packages/repo-hybrid/.env
@@ -6,7 +6,7 @@
 NODE_ENV = 'development'
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/'
+VUE_APP_RELEASE_FLODER_PATH = '/hybrid/'
 
 ## API 路径
 ## Mock API
