Complete 【ID1008338】 【互医平台-医生端PC】健康档案中显示检验检查单列表、详情功能页开发

--- a/packages/repo-doctor/.env.prod
+++ b/packages/repo-doctor/.env.prod
@@ -5,6 +5,8 @@ NODE_ENV = 'production'
 
 ## BASE API
 VUE_APP_BASE_API = 'https://doctor.holoalpha.com/'
+## HYBRID API
+VUE_APP_HYBRID_API = 'https://web.holoalpha.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = 'a5b5212d7ff034b508d6e889040ffdf7'
