--- a/packages/repo-doctor/.env.test
+++ b/packages/repo-doctor/.env.test
@@ -5,6 +5,8 @@ NODE_ENV = 'production'
 
 ## BASE API
 VUE_APP_BASE_API = 'https://testdoctor.holoalpha.com/'
+## HYBRID API
+VUE_APP_HYBRID_API = 'https://testweb.holoalpha.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
