--- a/packages/repo-doctor/.env
+++ b/packages/repo-doctor/.env
@@ -7,6 +7,8 @@ NODE_ENV = 'development'
 VUE_APP_MOCK_API = 'http://devyapi.holoalpha.com/mock/27/'
 ## BASE API
 VUE_APP_BASE_API = 'https://devdoctor.holoalpha.com/'
+## HYBRID API
+VUE_APP_HYBRID_API = 'https://devweb.holoalpha.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
