--- a/packages/repo-doctor/.env.pre
+++ b/packages/repo-doctor/.env.pre
@@ -5,6 +5,8 @@ NODE_ENV = 'production'
 
 ## BASE API
 VUE_APP_BASE_API = 'https://predoctor.holoalpha.com/'
+## HYBRID API
+VUE_APP_HYBRID_API = 'https://preweb.holoalpha.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = 'a5b5212d7ff034b508d6e889040ffdf7'
