--- a/packages/repo-patient/.env.test
+++ b/packages/repo-patient/.env.test
@@ -8,3 +8,6 @@ VUE_APP_BASE_API = 'https://testpatient.holoalpha.com/'
 
 ## IM KEY
 VUE_APP_IM_KEY = '987faa06038223aa9151e8e6e974314e'
+
+## 外链配置
+VUE_APP_IFRAME_BASE_URL='https://testweb.holoalpha.com/'
