Complete dynamic configuration

--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -10,6 +10,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/'
 
 ## 官网地址
 VUE_APP_WEB_SITE = 'http://localhost:8080/'
+VUE_APP_PRESCRIPTION_SITE = 'http://test.hdysystems.com/'
 
 ## API 路径
 ## Mock API 
