Complete Layout  nav  and sso

--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -11,5 +11,9 @@ VUE_APP_RELEASE_FLODER_PATH = '/'
 ## API 路径
 ## Mock API 
 VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/47/'
+
 ## Server API
 VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
+
+## 处方系统地址
+VUE_APP_PRESCRIPTION = 'http://test.hdysystems.com:8071/'
