添加链接地址

--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -17,3 +17,6 @@ VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
 
 ## 处方系统地址
 VUE_APP_PRESCRIPTION = 'http://test.hdysystems.com:8071/'
+
+## 互医系统地址
+VUE_APP_NETHOSPITAL = 'http://localhost:8080/#'
