--- a/packages/repo-operation/.env.pre
+++ b/packages/repo-operation/.env.pre
@@ -8,3 +8,9 @@ NODE_ENV = 'production'
 
 ## Server API
 VUE_APP_BASE_API = 'https://preoperate.holoalpha.com/'
+
+## 处方系统地址
+VUE_APP_PRESCRIPTION = 'http://pre.hdysystems.com:8071/'
+
+## 互医系统地址
+VUE_APP_NETHOSPITAL = 'https://preapi.holoalpha.com/backend/#'
