--- a/packages/repo-operation/.env.dev
+++ b/packages/repo-operation/.env.dev
@@ -11,3 +11,9 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
+
+## 处方系统地址
+VUE_APP_PRESCRIPTION = 'http://test.hdysystems.com:8071/'
+
+## 互医系统地址
+VUE_APP_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
