--- a/packages/repo-operation/.env.prod
+++ b/packages/repo-operation/.env.prod
@@ -8,3 +8,9 @@ NODE_ENV = 'production'
 
 ## Server API
 VUE_APP_BASE_API = 'https://operate.holoalpha.com/'
+
+## 处方系统地址
+VUE_APP_PRESCRIPTION = 'http://hdysystems.com:8071/'
+
+## 互医系统地址
+VUE_APP_NETHOSPITAL = 'https://api.holoalpha.com/backend/#'
