Complete nav link

--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -8,6 +8,9 @@ NODE_ENV = 'development'
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
+## 运营端地址
+VUE_APP_OPERATION_SITE = 'http://testduroc.imedcloud.jk.com/'
+
 ## API 路径
 ## Mock API 
 VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/47/'
