--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -8,6 +8,7 @@ NODE_ENV = 'production'
 
 ## 官网地址
 VUE_APP_WEB_SITE = 'http://testweb.imedcloud.jk.com/'
+VUE_APP_ORGANIZATION_SITE='https://testapi.holoalpha.com/mechanism/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://testconsole.holoalpha.com/'
