--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -8,7 +8,9 @@ NODE_ENV = 'production'
 
 ## 官网地址
 VUE_APP_WEB_SITE = 'http://web.imedcloud.jk.com/'
-VUE_APP_ORGANIZATION_SITE='https://api.holoalpha.com/mechanism/'
+
+VUE_APP_PRESCRIPTION_SITE = 'http://durhome.imedcloud.jk.com/'
+VUE_APP_ORGANIZATION_SITE='https://api.holoalpha.com/mechanism/#/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://console.holoalpha.com/'
