--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -6,9 +6,15 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/web/'
+
+
 ## 官网地址
-VUE_APP_WEB_SITE = 'http://testweb.imedcloud.jk.com/'
-VUE_APP_ORGANIZATION_SITE='https://testapi.holoalpha.com/mechanism/'
+VUE_APP_WEB_SITE = 'http://testweb.imedcloud.jk.com/web/'
+
+VUE_APP_PRESCRIPTION_SITE = 'http://testdurhome.imedcloud.jk.com/'
+VUE_APP_ORGANIZATION_SITE='https://testapi.holoalpha.com/mechanism/#/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://testconsole.holoalpha.com/'
