--- a/packages/repo-organization/.env.pre
+++ b/packages/repo-organization/.env.pre
@@ -8,7 +8,9 @@ NODE_ENV = 'production'
 
 ## 官网地址
 VUE_APP_WEB_SITE = 'http://preweb.imedcloud.jk.com/'
-VUE_APP_ORGANIZATION_SITE='https://preapi.holoalpha.com/mechanism/'
+
+VUE_APP_PRESCRIPTION_SITE = 'http://predurhome.imedcloud.jk.com/'
+VUE_APP_ORGANIZATION_SITE='https://preapi.holoalpha.com/mechanism/#/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://preconsole.holoalpha.com/'
