--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -11,7 +11,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 
 
 ## 官网地址
-VUE_APP_WEB_SITE = 'http://testweb.imedcloud.jk.com/web/'
+VUE_APP_WEB_SITE = 'http://testconsole.holoalpha.com/web/'
 
 VUE_APP_PRESCRIPTION_SITE = 'http://testdurhome.imedcloud.jk.com/'
 VUE_APP_ORGANIZATION_SITE='https://testapi.holoalpha.com/mechanism/#/'
