--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -6,5 +6,14 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/web/'
+
 ## Server API
 VUE_APP_BASE_API = 'https://testoperate.holoalpha.com/'
+
+## 处方系统地址
+VUE_APP_PRESCRIPTION = 'http://test.hdysystems.com:8071/'
+
+## 互医系统地址
+VUE_APP_NETHOSPITAL = 'https://testapi.holoalpha.com/backend/#'
