--- a/packages/repo-operation/.env.prod
+++ b/packages/repo-operation/.env.prod
@@ -6,6 +6,9 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+## Nginx 虚拟路径
+VUE_APP_RELEASE_FLODER_PATH = '/web/'
+
 ## Server API
 VUE_APP_BASE_API = 'https://operate.holoalpha.com/'
 
