--- a/packages/repo-organization/.env.pre
+++ b/packages/repo-organization/.env.pre
@@ -9,7 +9,7 @@ NODE_ENV = 'production'
 ## 官网地址
 VUE_APP_WEB_SITE = 'http://preweb.imedcloud.jk.com/'
 
-VUE_APP_PRESCRIPTION_SITE = 'http://predurhome.imedcloud.jk.com/'
+VUE_APP_PRESCRIPTION_SITE = 'https://predurhome.imedcloud.jk.com/'
 VUE_APP_ORGANIZATION_SITE='https://preapi.holoalpha.com/mechanism/#/'
 
 ## Server API
