--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -11,7 +11,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/'
 ## 官网地址
 VUE_APP_WEB_SITE = 'http://localhost:8080/'
 
-VUE_APP_PRESCRIPTION_SITE = 'http://testdurhome.imedcloud.jk.com/'
+VUE_APP_PRESCRIPTION_SITE = 'https://testdurhome.imedcloud.jk.com/'
 VUE_APP_ORGANIZATION_SITE='http://localhost:8013/#/'
 
 
