--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -8,8 +8,6 @@ NODE_ENV = 'development'
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
-## 运营端地址
-VUE_APP_OPERATION_SITE = 'http://testduroc.imedcloud.jk.com/'
 
 ## API 路径
 ## Mock API 
@@ -18,8 +16,8 @@ VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/47/'
 ## Server API
 VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
 
-## 处方系统地址
-VUE_APP_PRESCRIPTION = 'http://test.hdysystems.com:8071/'
+## 处方运营端系统地址
+VUE_APP_OPERATION_SITE = 'https://devduroc.imedcloud.jk.com/'
 
-## 互医系统地址
+## 互医运营端系统地址
 VUE_APP_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
