--- a/packages/repo-operation/.env.pre
+++ b/packages/repo-operation/.env.pre
@@ -12,8 +12,8 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 ## Server API
 VUE_APP_BASE_API = 'https://preoperate.holoalpha.com/'
 
-## 处方系统地址
-VUE_APP_PRESCRIPTION = 'http://pre.hdysystems.com:8071/'
+## 处方运营端系统地址
+VUE_APP_OPERATION_SITE = 'https://preduroc.imedcloud.jk.com/'
 
-## 互医系统地址
+## 互医运营端系统地址
 VUE_APP_NETHOSPITAL = 'https://preapi.holoalpha.com/backend/#'
