--- a/packages/repo-operation/package.json
+++ b/packages/repo-operation/package.json
@@ -6,19 +6,26 @@
     "start": "npm run serve",
     "serve": "vue-cli-service serve",
     "build:dev": "vue-cli-service build --mode dev",
+    "deploy:dev": "vue-cli-service build --mode dev && cross-env NODE_ENV=dev node ./deploy",
     "build:test": "vue-cli-service build --mode test",
+    "deploy:test": "vue-cli-service build --mode test && cross-env NODE_ENV=test node ./deploy",
     "build:pre": "vue-cli-service build --mode pre",
+    "deploy:pre": "vue-cli-service build --mode pre && cross-env NODE_ENV=pre node ./deploy",
     "build:prod": "vue-cli-service build --mode prod",
+    "deploy:prod": "vue-cli-service build --mode prod && cross-env NODE_ENV=prod node ./deploy",
     "build": "vue-cli-service build --mode prod",
+    "deploy": "vue-cli-service build --mode prod && cross-env NODE_ENV=prod node ./deploy",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "cross-env": "^7.0.2",
     "element-ui": "^2.13.1",
     "jsonschema": "^1.2.6",
     "quasar": "^1.0.0",
+    "scp2": "^0.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.3.0"
