--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -13,7 +13,10 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 ## 官网地址
 VUE_APP_WEB_SITE = 'https://testweb.holoalpha.com/web/'
 
+## 处方共享管理、合理用药管理、药品供应管理 地址
 VUE_APP_PRESCRIPTION_SITE = 'https://testdurhome.imedcloud.jk.com/'
+
+## 互联网医院 地址
 VUE_APP_ORGANIZATION_SITE='https://testapi.holoalpha.com/mechanism/#/'
 
 ## Server API
