--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -9,7 +9,10 @@ NODE_ENV = 'production'
 ## 官网地址
 VUE_APP_WEB_SITE = 'https://web.imedcloud.jk.com/'
 
+## 处方共享管理、合理用药管理、药品供应管理 地址
 VUE_APP_PRESCRIPTION_SITE = 'https://durhome.imedcloud.jk.com/'
+
+## 互联网医院 地址
 VUE_APP_ORGANIZATION_SITE='https://api.holoalpha.com/mechanism/#/'
 
 ## Server API
