--- a/packages/repo-website/.env.prod
+++ b/packages/repo-website/.env.prod
@@ -7,7 +7,12 @@
 NODE_ENV = 'production'
 
 
+## 控制台路径
+VUE_APP_CONSOLE_SITE = 'https://console.imedcloud.jk.com/'
 ## 医生登录入口路径
 VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://doctor.holoalpha.com/doctorpc/#/login'
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://durhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
+
+## Server API
+VUE_APP_BASE_API = 'https://web.holoalpha.com/'
