--- a/packages/repo-website/.env.test
+++ b/packages/repo-website/.env.test
@@ -6,7 +6,12 @@
 ## 编译模式
 NODE_ENV = 'production'
 
+## 控制台路径
+VUE_APP_CONSOLE_SITE = 'https://testconsole.holoalpha.com/web/'
 ## 医生登录入口路径
 VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://testdoctor.holoalpha.com/doctorpc/#/login'
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://testdurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
+
+## Server API
+VUE_APP_BASE_API = 'https://testweb.holoalpha.com/'
