--- a/packages/repo-website/.env
+++ b/packages/repo-website/.env
@@ -8,7 +8,16 @@ NODE_ENV = 'development'
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
+
+## 控制台路径
+VUE_APP_CONSOLE_SITE = 'http://localhost:8081/'
 ## 医生登录入口路径
 VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://devdoctor.holoalpha.com/doctorpc/#/login'
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://testdurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
+
+## API 路径
+## Mock API 
+VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/51/'
+## Server API
+VUE_APP_BASE_API = 'https://devweb.holoalpha.com/'
