--- a/packages/repo-operation/.env.pre
+++ b/packages/repo-operation/.env.pre
@@ -14,3 +14,6 @@ VUE_APP_OPERATION_SITE = 'https://preduroc.imedcloud.jk.com/'
 
 ## 互医运营端系统地址
 VUE_APP_NETHOSPITAL = 'https://preapi.holoalpha.com/backend/#'
+
+## 互医机构端端系统地址
+VUE_APP_NETHOSPITAL_ORG = 'https://preapi.holoalpha.com/mechanism/#/'
