--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -17,3 +17,6 @@ VUE_APP_OPERATION_SITE = 'https://testduroc.imedcloud.jk.com/'
 
 ## 互医运营端系统地址
 VUE_APP_NETHOSPITAL = 'https://testapi.holoalpha.com/backend/#'
+
+## 互医机构端端系统地址
+VUE_APP_NETHOSPITAL_ORG = 'https://testapi.holoalpha.com/mechanism/#/'
