修改数据0时柱状图折叠

--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -20,7 +20,7 @@ VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
 VUE_APP_OPERATION_SITE = 'https://testduroc.imedcloud.jk.com/'
 
 ## 互医运营端系统地址
-VUE_APP_NETHOSPITAL = 'http://localhost:8080/#/'
+VUE_APP_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
 
 ## 互医机构端端系统地址
 VUE_APP_NETHOSPITAL_ORG = 'https://devapi.holoalpha.com/mechanism/#/'
