动态路由有点问题先提交

--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -12,7 +12,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/'
 VUE_APP_WEB_SITE = 'http://localhost:8080/'
 
 VUE_APP_PRESCRIPTION_SITE = 'https://testdurhome.imedcloud.jk.com/'
-VUE_APP_ORGANIZATION_SITE='http://localhost:8013/#/'
+VUE_APP_ORGANIZATION_SITE='https://devapi.holoalpha.com/mechanism/#/'
 
 
 ## API 路径
