Change env  - 处方运营端系统地址

--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -17,7 +17,7 @@ VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/47/'
 VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
 
 ## 处方运营端系统地址
-VUE_APP_OPERATION_SITE = 'https://testduroc.imedcloud.jk.com/'
+VUE_APP_OPERATION_SITE = 'https://oc.test.hdysystems.com/'
 
 ## 互医运营端系统地址
 VUE_APP_NETHOSPITAL = 'https://devapi.holoalpha.com/backend/#'
