--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -13,7 +13,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/web/'
 VUE_APP_BASE_API = 'https://testoperate.holoalpha.com/'
 
 ## 处方运营端系统地址
-VUE_APP_OPERATION_SITE = 'https://oc.test.hdysystems.com/'
+VUE_APP_OPERATION_SITE = 'https://testduroc.imedcloud.jk.com/'
 
 ## 互医运营端系统地址
 VUE_APP_NETHOSPITAL = 'https://testapi.holoalpha.com/backend/#'
