修改开发环境药师登录入口路径

--- a/packages/repo-website/.env
+++ b/packages/repo-website/.env
@@ -14,7 +14,7 @@ VUE_APP_CONSOLE_SITE = 'http://localhost:8081/'
 ## 医生登录入口路径
 VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://devdoctor.holoalpha.com/doctorpc/#/login'
 ## 药师登录入口路径
-VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://testdurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
+VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://devdurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
 
 ## API 路径
 ## Mock API 
