--- a/packages/repo-website/.env.dev
+++ b/packages/repo-website/.env.dev
@@ -14,7 +14,7 @@ VUE_APP_CONSOLE_SITE = 'https://devconsole.holoalpha.com/web/'
 ## 医生登录入口路径
 VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://devdoctor.holoalpha.com/doctorpc/#/login'
 ## 药师登录入口路径
-VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://testdurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
+VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://devdurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
 
 ## Server API
 VUE_APP_BASE_API = 'https://devweb.holoalpha.com/'
