--- a/packages/repo-organization/.env.pre
+++ b/packages/repo-organization/.env.pre
@@ -15,5 +15,6 @@ VUE_APP_PRESCRIPTION_SITE = 'https://predurhome.imedcloud.jk.com/'
 ## 互联网医院 地址
 VUE_APP_ORGANIZATION_SITE='https://preapi.holoalpha.com/mechanism/#/'
 
+## API 路径
 ## Server API
 VUE_APP_BASE_API = 'https://preconsole.holoalpha.com/'
