--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -15,5 +15,6 @@ VUE_APP_PRESCRIPTION_SITE = 'https://durhome.imedcloud.jk.com/'
 ## 互联网医院 地址
 VUE_APP_ORGANIZATION_SITE='https://api.holoalpha.com/mechanism/#/'
 
+## API 路径
 ## Server API
 VUE_APP_BASE_API = 'https://console.holoalpha.com/'
