--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -18,5 +18,6 @@ VUE_APP_PRESCRIPTION_SITE = 'https://devdurhome.imedcloud.jk.com/'
 ## 互联网医院 地址
 VUE_APP_ORGANIZATION_SITE='https://devapi.holoalpha.com/mechanism/#/'
 
+## API 路径
 ## Server API
 VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
