--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -19,5 +19,6 @@ VUE_APP_PRESCRIPTION_SITE = 'https://testdurhome.imedcloud.jk.com/'
 ## 互联网医院 地址
 VUE_APP_ORGANIZATION_SITE='https://testapi.holoalpha.com/mechanism/#/'
 
+## API 路径
 ## Server API
 VUE_APP_BASE_API = 'https://testconsole.holoalpha.com/'
