Fixed 【ID1001147】 控制台退出登录回到官网登录页

--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -10,6 +10,8 @@ VUE_APP_RELEASE_FLODER_PATH = '/'
 
 ## 官网地址
 VUE_APP_WEB_SITE = 'http://localhost:8080/'
+##官网登录页路由
+VUE_APP_WEB_SITE_LOGIN='login'
 
 ## 处方共享管理、合理用药管理、药品供应管理 地址
 VUE_APP_PRESCRIPTION_SITE = 'https://devdurhome.imedcloud.jk.com/'
