--- a/packages/repo-website/.env
+++ b/packages/repo-website/.env
@@ -8,6 +8,9 @@ NODE_ENV = 'development'
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
+## 终端信息
+VUE_APP_CLIENT_ID = 'console'
+VUE_APP_CLIENT_SECRET = 'console'
 
 ## 控制台路径
 VUE_APP_CONSOLE_SITE = 'http://localhost:8081/'
@@ -15,9 +18,14 @@ VUE_APP_CONSOLE_SITE = 'http://localhost:8081/'
 VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://devdoctor.holoalpha.com/doctorpc/#/login'
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://devdurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
+## 权限登陆入口路径
+VUE_APP_AUTH_SITE = 'http://localhost:8082/auth/'
 
 ## API 路径
 ## Mock API 
 VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/51/'
 ## Server API
 VUE_APP_BASE_API = 'https://devweb.holoalpha.com/'
+
+## Auth API
+VUE_APP_AUTH_API = 'http://zyy-gateway:9999/'
