--- a/packages/repo-website/package.json
+++ b/packages/repo-website/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "cross-env": "^7.0.2",
+    "crypto-js": "^4.0.0",
     "element-ui": "^2.13.1",
     "jquery": "^3.5.1",
     "jsonschema": "^1.2.6",
