--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -8,6 +8,10 @@ NODE_ENV = 'development'
 ## Nginx 虚拟路径
 VUE_APP_RELEASE_FLODER_PATH = '/'
 
+## 终端信息
+VUE_APP_CLIENT_ID = 'console'
+VUE_APP_CLIENT_SECRET = 'console'
+
 ## 官网地址
 VUE_APP_WEB_SITE = 'http://localhost:8080/'
 ##官网登录页路由
@@ -25,3 +29,6 @@ VUE_APP_ORGANIZATION_SITE='https://devapi.holoalpha.com/mechanism/#/'
 VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/43/'
 ## Server API
 VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
+
+## Auth API
+VUE_APP_AUTH_API = 'http://zyy-gateway:9999/'
