--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -18,3 +18,6 @@ VUE_APP_ORGANIZATION_SITE='https://api.holoalpha.com/mechanism/#/'
 ## API 路径
 ## Server API
 VUE_APP_BASE_API = 'https://console.holoalpha.com/'
+
+## Auth API
+VUE_APP_AUTH_API = 'http://114.115.150.24:9999'
