--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -31,4 +31,4 @@ VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/43/'
 VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API = 'http://zyy-gateway:9999/'
+VUE_APP_AUTH_API = 'http://114.115.150.24:9999/'
