--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -21,3 +21,6 @@ VUE_APP_ORGANIZATION_SITE='https://devapi.holoalpha.com/mechanism/#/'
 ## API 路径
 ## Server API
 VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
+
+## Auth API
+VUE_APP_AUTH_API = 'http://114.115.150.24:9999/'
