--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -22,3 +22,6 @@ VUE_APP_ORGANIZATION_SITE='https://testapi.holoalpha.com/mechanism/#/'
 ## API 路径
 ## Server API
 VUE_APP_BASE_API = 'https://testconsole.holoalpha.com/'
+
+## Auth API
+VUE_APP_AUTH_API = 'http://114.115.150.24:9999'
