--- a/packages/repo-website/.env.pre
+++ b/packages/repo-website/.env.pre
@@ -12,6 +12,11 @@ VUE_APP_CONSOLE_SITE = 'https://preconsole.imedcloud.jk.com/'
 VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://predoctor.holoalpha.com/doctorpc/#/login'
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://predurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
+## 权限登陆入口路径
+VUE_APP_AUTH_SITE = 'http://localhost:8082/auth/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://preweb.holoalpha.com/'
+
+## Auth API
+VUE_APP_AUTH_API = 'http://114.115.150.24:9999/'
