--- a/packages/repo-website/.env
+++ b/packages/repo-website/.env
@@ -19,7 +19,8 @@ VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://devdoctor.holoalpha.com/doctorpc/#/logi
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://devdurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
 ## 权限登陆入口路径
-VUE_APP_AUTH_SITE = 'http://localhost:8082/auth/'
+## VUE_APP_AUTH_SITE = 'http://localhost:8082/auth/'
+VUE_APP_AUTH_SITE = 'http://114.115.150.24:8013/auth/'
 
 ## API 路径
 ## Mock API 
@@ -28,4 +29,5 @@ VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/51/'
 VUE_APP_BASE_API = 'https://devweb.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API = 'http://zyy-gateway:9999/'
+VUE_APP_AUTH_API = 'http://114.115.150.24:9999/'
+
