--- a/packages/repo-website/.env.prod
+++ b/packages/repo-website/.env.prod
@@ -13,6 +13,11 @@ VUE_APP_CONSOLE_SITE = 'https://console.imedcloud.jk.com/'
 VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://doctor.holoalpha.com/doctorpc/#/login'
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://durhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
+## 权限登陆入口路径
+VUE_APP_AUTH_SITE = 'http://localhost:8082/auth/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://web.holoalpha.com/'
+
+## Auth API
+VUE_APP_AUTH_API = 'http://114.115.150.24:9999/'
