--- a/packages/repo-auth/.env.dev
+++ b/packages/repo-auth/.env.dev
@@ -7,7 +7,7 @@
 NODE_ENV = 'production'
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/web/'
+VUE_APP_RELEASE_FLODER_PATH = '/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://devoperate.holoalpha.com/'
