--- a/packages/repo-website/.env.pre
+++ b/packages/repo-website/.env.pre
@@ -13,10 +13,10 @@ VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://predoctor.holoalpha.com/doctorpc/#/logi
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://predurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
 ## 权限登陆入口路径
-VUE_APP_AUTH_SITE = 'http://localhost:8082/auth/'
+VUE_APP_AUTH_SITE = 'https://preauthweb.imedcloud.jk.com/auth/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://preweb.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API = 'http://114.115.150.24:9999/'
+VUE_APP_AUTH_API = 'https://preauth.imedcloud.jk.com/'
