--- a/packages/repo-website/.env.dev
+++ b/packages/repo-website/.env.dev
@@ -16,10 +16,10 @@ VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://devdoctor.holoalpha.com/doctorpc/#/logi
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://devdurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
 ## 权限登陆入口路径
-VUE_APP_AUTH_SITE = 'http://114.115.150.24:8013/auth/'
+VUE_APP_AUTH_SITE = 'https://devauthweb.imedcloud.jk.com/auth/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://devweb.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API = 'http://114.115.150.24:9999/'
+VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
