--- a/packages/repo-website/.env.test
+++ b/packages/repo-website/.env.test
@@ -16,10 +16,10 @@ VUE_APP_DOCTOR_WORKBENCH_SITE = 'https://testdoctor.holoalpha.com/doctorpc/#/log
 ## 药师登录入口路径
 VUE_APP_PHARMACIST_WORKBENCH_SITE = 'http://testdurhome.imedcloud.jk.com/InstitutionalAccessLogin/PharmacistLogin'
 ## 权限登陆入口路径
-VUE_APP_AUTH_SITE = 'http://localhost:8082/auth/'
+VUE_APP_AUTH_SITE = 'https://testauthweb.imedcloud.jk.com/auth/'
 
 ## Server API
 VUE_APP_BASE_API = 'https://testweb.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API = 'http://114.115.150.24:9999/'
+VUE_APP_AUTH_API = 'https://testauth.imedcloud.jk.com/'
