添加合理用药base域名

--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -32,3 +32,6 @@ VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
 
 ## Auth API
 VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
+
+## MDS API
+VUE_APP_MDS_API = 'https://devdurservice.imedcloud.jk.com/'
