--- a/packages/repo-organization/.env.pre
+++ b/packages/repo-organization/.env.pre
@@ -21,3 +21,6 @@ VUE_APP_BASE_API = 'https://preconsole.holoalpha.com/'
 
 ## Auth API
 VUE_APP_AUTH_API = 'https://preauth.imedcloud.jk.com/'
+
+## MDS API
+VUE_APP_MDS_API = 'https://predurservice.imedcloud.jk.com/'
