--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -21,3 +21,6 @@ VUE_APP_BASE_API = 'https://console.holoalpha.com/'
 
 ## Auth API
 VUE_APP_AUTH_API = 'https://auth.imedcloud.jk.com/'
+
+## MDS API
+VUE_APP_MDS_API = 'https://durservice.imedcloud.jk.com/'
