--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -25,3 +25,6 @@ VUE_APP_BASE_API = 'https://testconsole.holoalpha.com/'
 
 ## Auth API
 VUE_APP_AUTH_API = 'https://testauth.imedcloud.jk.com/'
+
+## MDS API
+VUE_APP_MDS_API = 'https://testdurservice.imedcloud.jk.com/'
