修改合理用药管理的域名

--- a/packages/repo-organization/.env.test
+++ b/packages/repo-organization/.env.test
@@ -27,4 +27,4 @@ VUE_APP_BASE_API = 'https://testconsole.holoalpha.com/'
 VUE_APP_AUTH_API = 'https://testauth.imedcloud.jk.com/'
 
 ## MDS API
-VUE_APP_MDS_API = 'https://testdurservice.imedcloud.jk.com/'
+VUE_APP_MDS_API = 'https://testservice.imedcloud.jk.com/'
