--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -26,4 +26,4 @@ VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
 VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
 
 ## MDS API
-VUE_APP_MDS_API = 'https://devdurservice.imedcloud.jk.com/'
+VUE_APP_MDS_API = 'https://devservice.imedcloud.jk.com/'
