--- a/packages/repo-organization/.env.prod
+++ b/packages/repo-organization/.env.prod
@@ -23,4 +23,4 @@ VUE_APP_BASE_API = 'https://console.holoalpha.com/'
 VUE_APP_AUTH_API = 'https://auth.imedcloud.jk.com/'
 
 ## MDS API
-VUE_APP_MDS_API = 'https://durservice.imedcloud.jk.com/'
+VUE_APP_MDS_API = 'https://service.imedcloud.jk.com/'
