--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -21,7 +21,7 @@ VUE_APP_WEB_SITE_LOGIN='login'
 VUE_APP_PRESCRIPTION_SITE = 'https://devdurhome.imedcloud.jk.com/'
 
 ## 互联网医院 地址
-VUE_APP_ORGANIZATION_SITE='https://devapi.holoalpha.com/mechanism/#/'
+VUE_APP_ORGANIZATION_SITE='http://localhost:8013/#/'
 
 
 ## API 路径
