修改药品属性列表不展示的问题

--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -18,7 +18,7 @@ VUE_APP_WEB_SITE = 'http://localhost:8080/'
 VUE_APP_WEB_SITE_LOGIN='login'
 
 ## 处方共享管理、合理用药管理、药品供应管理 地址
-VUE_APP_PRESCRIPTION_SITE = 'https://devdurhome.imedcloud.jk.com/'
+VUE_APP_PRESCRIPTION_SITE = 'https://testdurhome.imedcloud.jk.com/'
 
 ## 互联网医院 地址
 VUE_APP_ORGANIZATION_SITE='http://localhost:8013/#/'
@@ -26,12 +26,12 @@ VUE_APP_ORGANIZATION_SITE='http://localhost:8013/#/'
 
 ## API 路径
 ## Mock API 
-VUE_APP_MOCK_API = 'https://devyapi.holoalpha.com/mock/43/'
+VUE_APP_MOCK_API = 'https://testyapi.holoalpha.com/mock/43/'
 ## Server API
-VUE_APP_BASE_API = 'https://devconsole.holoalpha.com/'
+VUE_APP_BASE_API = 'https://testconsole.holoalpha.com/'
 
 ## Auth API
-VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
+VUE_APP_AUTH_API = 'https://testauth.imedcloud.jk.com/'
 
 ## MDS API
-VUE_APP_MDS_API = 'https://devservice.imedcloud.jk.com/'
+VUE_APP_MDS_API = 'https://testservice.imedcloud.jk.com/'
