完成下载药品模板下载

--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -27,3 +27,6 @@ VUE_APP_AUTH_API = 'https://devauth.imedcloud.jk.com/'
 
 ## MDS API
 VUE_APP_MDS_API = 'https://devservice.imedcloud.jk.com/'
+
+## PSD API
+VUE_APP_PSD_API = 'https://devdurpsd.imedcloud.jk.com/'
