--- a/packages/repo-pharmacist/.env.pre
+++ b/packages/repo-pharmacist/.env.pre
@@ -8,9 +8,9 @@ NODE_ENV = 'production'
 
 # API CONFIG
 ## API MOCK BASE
-VUE_APP_MOCK_API = 'https://yapi.imedcloud.jk.com/mock/25/'
+VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
 ## API BASE
-VUE_APP_BASE_API = 'https://preservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://preservice.imedcloud.jk.com/'
 
 # SITE CONFIG
 ## SITE BASE 
