--- a/packages/repo-pharmacist/.env
+++ b/packages/repo-pharmacist/.env
@@ -23,9 +23,9 @@ VUE_APP_ROUTE_EXCEPTION_401 = '/401'
 
 # API CONFIG
 ## API MOCK BASE
-VUE_APP_MOCK_API = 'https://yapi.imedcloud.jk.com/mock/25/'
+VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
 ## API BASE
-VUE_APP_BASE_API = 'https://devservice.imedcloud.jk.com/'
+VUE_APP_API_BASE = 'https://devservice.imedcloud.jk.com/'
 
 # SITE CONFIG
 ## SITE BASE 
