--- a/packages/repo-pharmacist/.env.test
+++ b/packages/repo-pharmacist/.env.test
@@ -7,8 +7,10 @@
 NODE_ENV = 'production'
 
 # API CONFIG
+## API MOCK BASE
+VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
 ## API BASE
-VUE_APP_API_BASE = ''
+VUE_APP_API_BASE = 'https://testservice.imedcloud.jk.com/'
 
 # SITE CONFIG
 ## SITE BASE 
