Refact by @jk998/vue-cli-template

--- a/packages/repo-auth/.env
+++ b/packages/repo-auth/.env
@@ -5,9 +5,27 @@
 ## 编译模式
 NODE_ENV = 'development'
 
+
+# AUTH CONFIG
+## CLIENT_ID
+VUE_APP_AUTH_CLIENT_ID = 'upms'
+## CLIENT_SECRET
+VUE_APP_AUTH_CLIENT_SECRET = 'upms'
+## 加密私有 key
+VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
+
+
+# API CONFIG
+## API MOCK BASE
+VUE_APP_API_MOCK = 'https://yapi.imedcloud.jk.com/mock/25/'
+## API BASE
+VUE_APP_API_BASE = 'https://devauth.imedcloud.jk.com/'
+
+
 # RELEASE CONFIG
 ## Nginx 虚拟路径 , 影响 vue router history
 VUE_APP_RELEASE_FLODER_PATH = '/'
+
 
 # ROUTE CONFIG
 ## 账户信息认证失败，redirect 401 
