--- a/packages/repo-auth/package.json
+++ b/packages/repo-auth/package.json
@@ -22,6 +22,7 @@
     "element-ui": "^2.13.2",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-json-editor": "^1.4.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.5.1"
   },
